NM-4731 Problem with liquid tag for featured items

--- a/app/views/instance_admin/reports/base/edit.html.haml
+++ b/app/views/instance_admin/reports/base/edit.html.haml
@@ -11,5 +11,6 @@
         .row
           .input-container.col-xs-12
             = draw_attribute_for_form(attribute, properties_form, true)
+    .row
       .input-container.col-xs-12
         = f.submit t('instance_admin.save'), class: 'btn btn-blue pull-right'
