Add app server meta tag for host recognition

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,6 +1,8 @@
 !!!
 %html
   %head
+    %meta{name: 'app-server', content: ENV['HOSTNAME']}
+    
     %title
       Desks Near Me - Admin
     = csrf_meta_tag
