--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -1,6 +1,8 @@
 !!!
 %html.no-js
   %head
+    %meta{name: 'app-server', content: ENV['HOSTNAME']}
+
     / Content
     %meta{:charset => "UTF-8"}/
     %title
