--- a/app/views/layouts/errors.html.haml
+++ b/app/views/layouts/errors.html.haml
@@ -1,6 +1,8 @@
 !!!
 %html
   %head
+    %meta{name: 'app-server', content: ENV['HOSTNAME']}
+
     %title
       #{ platform_context.try(:name) || "Desks Near Me" } - #{@title}
     %meta{:'http-equiv' => "Content-type", :content=> "text/html;charset=UTF-8"}
@@ -16,4 +18,3 @@
 
   %body
     = yield
-
