--- a/app/views/layouts/instance_wizard.html.haml
+++ b/app/views/layouts/instance_wizard.html.haml
@@ -1,6 +1,8 @@
 !!!
 %html{dir: "ltr", lang: "en-US", xmlns: "http://www.w3.org/1999/xhtml"}
   %head
+    %meta{name: 'app-server', content: ENV['HOSTNAME']}
+
     %title= content_for?(:title) ? yield(:title) : 'Near Me'
 
     %meta{content: "text/html; charset=US-ASCII", "http-equiv" => "Content-type"}
