NM-4742 Add hints to elements on review page

--- a/app/frontend/stylesheets/components/_box.scss
+++ b/app/frontend/stylesheets/components/_box.scss
@@ -158,6 +158,14 @@
   }
 }
 
+.box.reservation-review {
+
+  .reservation-properties {
+    margin-top: 15px;
+  }
+
+}
+
 .box-inverse {
   border: none;
 
