--- a/app/views/listings/reservations/_confirm_reservations.html.haml
+++ b/app/views/listings/reservations/_confirm_reservations.html.haml
@@ -5,12 +5,15 @@
       = t('reservations.paypal_and_cc_charge_after_confirmation')
     - else
       = t('reservations.charge_after_confirmation')
-    %br
+
+- if @reservation_request
+  %p.cancellation-info
     - if @reservation_request.listing.transactable_type.cancellation_policy_hours_for_cancellation.zero?
       = t('reservations.no_cancellation_time')
     - else
       %span.cancellation-time
         = t('reservations.cancellation_time', time: @reservation_request.listing.transactable_type.cancellation_policy_hours_for_cancellation)
+
     - if @reservation_request.listing.transactable_type.cancellation_policy_penalty_percentage.zero? && @reservation_request.listing.transactable_type.cancellation_policy_penalty_hours.zero?
       = t('reservations.no_cancellation_fee')
     - elsif @reservation_request.listing.transactable_type.cancellation_policy_penalty_hours > 0
