--- a/app/views/shared/components/_wish_list_button.html.liquid
+++ b/app/views/shared/components/_wish_list_button.html.liquid
@@ -1,10 +1,10 @@
 <div class="favorite favorite-toggler" id="favorite-{{ object | dom_id }}" data-favorite-id="{{ object.id }}">
   {% assign is_favorite = current_user | already_favorite:object %}
   {% if is_favorite %}
-    {% assign path = 'wish_list_path' | generate_url: id: object.id, wishlistable_type: object.class_name, method: 'delete' %}
+    {% assign path = 'wish_list_path' | generate_url: id: object.id, wishlistable_type: object.class_name %}
     {% assign method = 'delete' %}
   {% else %}
-    {% assign path = 'wish_lists_path' | generate_url: id: object.id, wishlistable_type: object.class_name, method: 'post' %}
+    {% assign path = 'wish_lists_path' | generate_url: id: object.id, wishlistable_type: object.class_name %}
     {% assign method = 'post' %}
   {% endif %}
     <a href="{{ path }}" class="{{ link_to_class }}" data-method="{{ method }}" data-action-link data-current-user="{% if current_user != blank %}true{% else%}false{% endif %}">
