--- a/app/views/wish_lists/create.js.erb
+++ b/app/views/wish_lists/create.js.erb
@@ -3,6 +3,6 @@
   el.querySelector('[data-favorite-icon]').classList.add('selected');
   el.querySelector('[data-text]').innerHTML = '<%= t('wish_lists.buttons.selected_state') %>';
   var link = el.querySelector('[data-action-link]');
-  link.href = '<%= wish_list_path(id: @item.id, wishlistable_type: @item.class.name, method: :delete).html_safe %>';
+  link.href = '<%= wish_list_path(id: @item.id, wishlistable_type: @item.class.name).html_safe %>';
   link.setAttribute('data-method', 'delete');
 }());
