--- a/app/community_views/comments/_activity_feed_comment.html.haml
+++ b/app/community_views/comments/_activity_feed_comment.html.haml
@@ -7,7 +7,7 @@
   %p.author
     = link_to comment.creator.decorate.secret_name, profile_path(comment.creator), target: target
   %blockquote
-    %p= readmore(comment.body)
+    %p= videoify_and_parse_with_markdown(comment.body, { iframe_width: 400, iframe_height: 225 })
   %p.meta
     %time{datetime: comment.created_at.strftime('%Y-%m-%d %H:%M')}= I18n.l(comment.created_at, format: :long)
 
