NM-4722 Basic group funtionality: create/add/edit/show and search
NM-4722 Cover photo, inviting group members, basic group show page, workflow step/alert

NM-4722 "join group" functionality, activity feed (creating group, photos), email notifications

NM-4722 Cover photo update, projects for groups, group detail page

NM-4722 Group tab in user profile, group detail page, manage members section, video upload

NM-4722 Group activity, permissions, instance admin group listview

--- a/app/community_views/registrations/show.html.haml
+++ b/app/community_views/registrations/show.html.haml
@@ -22,6 +22,10 @@
             = t :projects
             %small= "(#{@all_projects.total_count})"
         %li
+          = link_to '#groups', role: "tab", :'data-toggle' => "tab" do
+            = t :groups
+            %small= "(#{@groups.total_count})"
+        %li
           = link_to '#following', role: "tab", :'data-toggle' => "tab" do
             = t :following
             %small= "(#{@user.following_count})"
@@ -55,6 +59,12 @@
         .box-a
           = render 'shared/show_projects', projects: @all_projects, container: '#projects', see_more_route: see_more_projects_path(id: @user.id, type: @user.class.name, container: '#projects'), sort_options: Project::SORT_OPTIONS + ['Pending approvals']
 
+  #groups.tab-pane.fade{:role => "tabpanel"}
+    .wrap-a.reduce-top
+      .contain
+        .box-a
+          = render 'shared/show_groups', groups: @groups, container: '#groups', see_more_route: see_more_groups_path(id: @user.id, type: @user.class.name, container: '#groups')
+
   #following.tab-pane.fade{:role => "tabpanel"}
     = render 'show_following', object: @user
 
@@ -62,5 +72,3 @@
     .wrap-a.reduce-top
       .contain
         .box-a= render 'shared/show_followers', container: '#followers', see_more_route: see_more_followers_path(id: @user.id, type: 'User', container: '#followers'), collection: @followers
-
-
