--- a/app/frontend/stylesheets/community.scss
+++ b/app/frontend/stylesheets/community.scss
@@ -44,6 +44,7 @@
 @import "intel/modules/projects";
 @import "intel/modules/modal";
 @import "intel/modules/flash-messages";
+@import "intel/modules/group";
 
 @import "intel/modules/intro-video";
 
