--- a/app/views/instance_admin/layout/_nav.html.haml
+++ b/app/views/instance_admin/layout/_nav.html.haml
@@ -132,3 +132,14 @@
             %li
               %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/projects/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
+
+    - if @authorizer.authorized?('Groups') && current_instance.is_community?
+      %li#groups
+        %a{"data-parent" => "#groups", "data-toggle" => "collapse", :href => "#groups-sub"}
+          %i.fa.fa-note
+          %span Groups
+        %ul#groups-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::Groups")}
+          - InstanceAdmin::BaseController::GROUPS_CONTROLLERS.each do |controller_name, settings|
+            %li
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/groups/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
+                %span= "#{controller_name.titleize}"
