--- a/app/community_views/search/community.html.haml
+++ b/app/community_views/search/community.html.haml
@@ -9,6 +9,8 @@
           = link_to t(:projects), search_url(search_type: :projects), data: { search_type: 'projects'}
         %li{ class: active_class(@search_type, 'topics', 'is-active')}
           = link_to t(:topics), search_url(search_type: :topics), data: { search_type: 'topics'}
+        %li{ class: active_class(@search_type, 'groups', 'is-active')}
+          = link_to t(:groups), search_url(search_type: :groups), data: { search_type: 'groups'}
     / white box
     .box-a
       .search-container
