--- a/app/frontend/stylesheets/intel/modules/_file-field.scss
+++ b/app/frontend/stylesheets/intel/modules/_file-field.scss
@@ -1,4 +1,12 @@
 /* file field */
+.cover-image {
+    label {
+        width: auto !important;
+        font-size: 16px !important;
+        line-height: 20px !important;
+        margin: 0 0 0 0 !important;
+    }
+}
 
 .file-a {
     display: inline-block;
