--- a/app/views/instance_admin/manage/workflows/workflow_alerts/_form.html.haml
+++ b/app/views/instance_admin/manage/workflows/workflow_alerts/_form.html.haml
@@ -9,6 +9,9 @@
         = f.input :alert_type, collection: WorkflowAlert::ALERT_TYPES, include_blank: false, input_html: { class: 'form-control', :'data-alert-type' => true }
       .input-container.col-xs-6
         = f.input :delay, label: 'Delay (minutes)', input_html: { class: 'form-control' }
+    .row
+      .input-container.col-xs-12
+        = f.input :prevent_trigger_condition, placeholder: t('instance_admin.workflows.alerts.prevent_trigger_condition'), input_html: { class: 'form-control' }
     %div{:'data-optional-settings-api_call' => true, :'data-optional-settings' => true}
       %h4 Api Call Settings
       .row
